force-app/main/default/objects/Contact/fields/Accessibility_Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Special_Needs__c</fullName>
    <description>Details of accessibility or special needs requested of the donor or family member.</description>
    <inlineHelpText>Details of accessibility or special needs requested of the donor or family member.</inlineHelpText>
    <label>Accessibility / Special Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>