force-app/main/default/objects/Contact/fields/Alumnus_of_Affiliated_School__c.field-meta.xml
<CustomField>
    <fullName>Alumnus_of_Affiliated_School__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Donor contact is an alumnus of the affiliated school or location.</description>
    <inlineHelpText>Did this person graduate from the affiliated school?</inlineHelpText>
    <label>Alumnus of Affiliated School</label>
    <type>Checkbox</type>
</CustomField>