force-app/main/default/objects/Contact/fields/Confidential_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Remarks__c</fullName>
    <label>Confidential Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>