force-app/main/default/objects/Contact/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <inlineHelpText>An identifying number or alphanumeric value for the donor&#39;s offering envelope. Can be shared by other members of the same household, and it is synced to the donor&#39;s GiveCentral profile.</inlineHelpText>
    <label>Donor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>