force-app/main/default/objects/Contact/fields/Envelope_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Envelope_Frequency__c</fullName>
    <label>Envelope Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Envelope_Frequency</valueSetName>
    </valueSet>
</CustomField>