force-app/main/default/objects/Contact/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <label>General Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>