force-app/main/default/objects/Contact/fields/Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Year__c</fullName>
    <description>Date the donor, student, or child graduated from the affiliated school.</description>
    <inlineHelpText>Date the donor, student, or child graduated from the affiliated school. Enter as YYYY.</inlineHelpText>
    <label>Graduation Year</label>
    <length>50</length>
    <type>Text</type>
</CustomField>