force-app/main/default/objects/Contact/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baptist</fullName>
            </value>
            <value>
                <fullName>Buddhist</fullName>
            </value>
            <value>
                <fullName>Christian</fullName>
            </value>
            <value>
                <fullName>Eastern_Orthodox</fullName>
                <label>Eastern Orthodox</label>
            </value>
            <value>
                <fullName>Episcopalian</fullName>
            </value>
            <value>
                <fullName>Hindu</fullName>
            </value>
            <value>
                <fullName>Jewish</fullName>
            </value>
            <value>
                <fullName>Lutheran</fullName>
            </value>
            <value>
                <fullName>Methodist</fullName>
            </value>
            <value>
                <fullName>Mormon</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pentecostal</fullName>
            </value>
            <value>
                <fullName>Presbyterian</fullName>
            </value>
            <value>
                <fullName>Quaker</fullName>
            </value>
            <value>
                <fullName>Roman_Catholic</fullName>
                <default>true</default>
                <label>Roman Catholic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>