force-app/main/default/objects/Contact/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>The donor&#39;s username for logging in to their GiveCentral profile. Email format is recommended.</inlineHelpText>
    <label>GC User ID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>