force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>Donor_Id__c</columns>
    <columns>User_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Donors</label>
</ListView>